@@ -23,6 +23,7 @@ Version 1.10.5+svn:
      and notes_string (all from the [objectives] tag) as attributes that need
      to be made translatable
    * Make drakes fly on volcano tiles (bug #20485).
+   * Fixed bug #20290: No longer terminate due to a corrupt savegame.
 
 Version 1.10.5:
  * Campaigns:
